# bouncy-feet

./: .gitignore  .gitmodules  BUILD.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml
bouncy_backend/: .env  Cargo.toml  Dockerfile  Makefile  db.sqlite  db.sqlite-shm  db.sqlite-wal  docker-compose.dev-hosted.yaml  docker-compose.hosted.yaml  docker-compose.yaml  readme.md  state.md
bouncy_backend/.sqlx/: query-00d91abd9c387f3538a08a5be18dbeccb0984597105d9443727eb45fa35a7de8.json  query-059acc74146825c9059ce7d7f464f94c53ceb804015902983f5b1528adeeef92.json  query-0766c27fcf79bfe0989a7ec21ebb927402776272b3b31dbfd5523e696fa1492f.json  query-0efda572a1cdcf070ee21d221cb17cd98d24801d62514b6b812ad8623d9a49ee.json  query-0f8eb93d8e39db7ddb3e227c9c601febd8d77fe0fadc17ac7ece09ab5d99e643.json  query-11ada75e3d3381380eef8213bdb87b00fd764a6521b69d853dfc570cd469070c.json  query-12f7b6cd39512a0b6d3ed51305aecb9b757939aac39326873988b56e7e9a5b6c.json  query-175013c309dc9fcbc07da3a8a5fddf3ea3b8e1fbfa20584f04964d1f23dc4b13.json  query-1aaaec7f1be727dfb1c340b94c83b87fec06f28079d5685843430eb899f4f991.json  query-1b16f2b6235faf4bbdd89b0c5fe287dea4afb94ad2c8241fd4a0582fe58f8460.json  query-1bf200e5cae3391f9a136686bf2a1a83847a994dfcd50900966ca1dba3467b2b.json  query-1c1f910c5319f056413fdc7ad89c1d7ff35866ed5508eefcb6d1ef753f7f66c0.json  query-1c70e3038540680faa32ad375436c916cbca9501755835eced1780fddbb4913b.json  query-203f78637824b67ffa7eb6fdc5d9fd726521027103caa7c5d2b225ad4b762007.json  query-211b87b45fa3af95b957cbf16e850b0d022dfc6ae33d4156bf927a97621776a1.json  query-216c3f1a4fd79a55d73cba5e32f7ff3a7c8b50656d9f4560d9de90384676017f.json  query-221692319781291444a792a36a877ec8d11477e78b96b1bd2cb6d83b2a9caf1f.json  query-221cb71e1e9b75ebcb70272de779ffac167ebdd4bbdfbbda5668a502ca94d2c6.json  query-23a3323be08465fd1dcd725731db15344c177625f226a9ab3f3f4d177dee8cf2.json  query-257c1737d2d6fb73ebc97e6ae96752ca42cb7ac7cba7e36ee026388796e25580.json  query-27c495c5629f751c57cfd82999f5081ecadca811e4e8aa7240faca3ddc301214.json  query-2cf8b06d4a6f746bf8d5633aef56f73277b7829e59daec21a710ae15165db75a.json  query-2d97e53b69e018d7a282aaea64c87f282f29b3152bb87f33295ecb21ea9dd64c.json  query-2e10b7c2a8faa16f22dc00df92f1e7d3fbbae12f4a1af3f1e795747d502ba53d.json  query-2e6573a6dde0af57115728dbcb5c4c371bb3b52370c81cc9b76f0aeaa7258298.json  query-2f41e3480f00b37ba30d4d231ccb24dfcf0801b548e919190ca5d05436348c88.json  query-2f789132dca2af737685ef1fac6608aadfe38f418bcf61904e29195b357caff5.json  query-34466bdcd8420de02d308c1efdd985ee315979da70604bd18882a79f9b435b32.json  query-3456f211bd465d0112bd0dbadbcc5399d4500aa9acf63d3695968613837d031a.json  query-34e056f83195e5553896ad5e2e861f2a974e894bcae2ef8a3e08f7277de9b03a.json  query-38544ca79c46acd12feff079241c75c26c58c6f00ffc7ed246b198620b7e4b3e.json  query-3a71ff296c2cfa175f55ce3936be4df1c9154c8364757159de80184a69eb6fd2.json  query-3c7c61aeda9c3be79e592d0d894bb423267e8da157f5b341682f099d40c1458a.json  query-40e49a5350c2bb8b830bceefc62acced11f5c3a3cc5486d7413a8ad85e6a9d3b.json  query-4297205e2268ebf5eae15a701c4f66512fe4644480e96832a044d0e12bc0e4e2.json  query-45ece147a0c6a0856b15ad6112bd17452b251f8439d6259922eb12f5024d53b8.json  query-46d7888b073f9588c98d4c59ec8ee56f0a5d8c7f6cae0311d4a0522dee20d554.json  query-4b8692669703fe9f9ca71897976e5a7ac2a97307a39fdddf31cb8208698063cf.json  query-4cb263c95b138519e03129b9d014a98308a8a473ba26a4fea8b04402294e77f9.json  query-4e6128c0a60fd87d77dad1b9df4f7c8593c1e3f4e6f780873899515771a3e322.json  (+68 more)
bouncy_backend/db_migrations/: 0000_init.sql  0001_http_session.sql  0002_clubs.sql  0003_club_channel.sql  0004_club_fields.sql  0005_user_peertube_id.sql  0006_club_delete_cascade.sql  0007_user_peertube_handle.sql  0008_combos.sql  0009_timestamps.sql  0010_beats.sql  0011_delete_cascade.sql  0012_beat_pose.sql  0013_clubs_combos.sql
bouncy_backend/src/: auth.rs  cache.rs  client_session.rs  dance_activity.rs  db.rs  main.rs  peertube.rs  stats.rs  user.rs  user2.rs  user_meta.rs
bouncy_backend/src/api_endoints/: auth.rs  client_session.rs  club.rs  combo.rs  mod.rs  peertube_token.rs  user.rs  user_meta.rs
bouncy_backend/src/db/: beat.rs  client_session.rs  club.rs  clubs_combos.rs  combo.rs  dance_activity.rs  playlist.rs  search.rs  test_helpers.rs  timestamp.rs  user.rs
bouncy_backend/src/layers/: mod.rs  oidc.rs  session.rs  user.rs
bouncy_backend/src/peertube/: channel.rs  common.rs  playlist.rs  system_user.rs  token.rs  user.rs
bouncy_instructor/: Cargo.toml  Makefile  coordinates.md
bouncy_instructor/src/: coordinates.md  intern.rs  keypoints.rs  lib.rs  pose.rs  pose_file.rs  public.rs  skeleton.rs  test_utils.rs  tracker.rs  web_utils.rs
bouncy_instructor/src/intern/: body_shift.rs  content_collection.rs  dance.rs  dance_collection.rs  dance_detector.rs  geom.rs  global_collection.rs  keypoints_iter.rs  lfsr.rs  lsfr.rs  pose.rs  pose_db.rs  pose_score.rs  skeleton_3d.rs  step.rs  step_pace.rs  teacher.rs  tracker_dance_collection.rs
bouncy_instructor/tests/: course_tests.rs  dance_tests.rs  pose_tests.rs  step_tests.rs
bouncy_lab/: Cargo.toml  README.md  build.rs
bouncy_lab/models/: pose_landmarker_full.task  pose_landmarker_heavy.task  pose_landmarker_lite.task
bouncy_lab/src/: ffmpeg.rs  generated.rs  keypoints.rs  lib.rs  main.rs  mediapipe.rs
bouncy_stats/: Cargo.toml  Dockerfile  docker-compose.dev-hosted.yaml  docker-compose.hosted.yaml  docker-compose.yaml  state.md  update_query_cache.sh
bouncy_stats/.sqlx/: query-0381cdafe68f1b51eea4137ea5399717c99647a5b143b1a155fa85e39421354f.json  query-1c3a29fc5089a25ad54af0fd3b440c6da51948cff25842bf22795bbba3d545e8.json  query-57ce7512a765e9f53a27b2c1e1cfb8e149578e734e303d145f99ec560e997411.json  query-7d0bb1160e2806e486c2e32dfe1d2a056459651aa7ac359c919f8bfee41a0be7.json  query-8e8b7384ea3edabc8f4a72b813eba825294ef72bd09f2420a58a60f68c5b5907.json  query-eeb239da5a4bcdc3e44846131e3c812b5b355fba1936020697d713f14b13c2d2.json
bouncy_stats/db_migrations/: 0000_init.sql
bouncy_stats/src/: auth.rs  client_session.rs  main.rs  user.rs  user2.rs  user_meta.rs
doc/: auth.md  (+1 more)
(+488 files in other folders)
