[package]
name = "bouncy_backend"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-oidc = "0.6.0"
chrono = "0.4"
dashmap = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "=0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5.1" }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower-sessions = { version = "0.14" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.13.1", features = ["serde", "v4"] }
url = "2.5.4"
reqwest = { version = "0.11", default-features = false, features = [
    "multipart",
    "rustls-tls",
    "json",
] }
async-trait = "0.1.89"
futures = "0.3.31"
thiserror = "2.0.17"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

[lints.clippy]
uninlined_format_args = "allow"
