[package]
name = "bouncy_instructor"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"
# TODO: author, license, etc

[lib]
# cdylib is for WASM
# rlib is required for integration tests to work
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
strip = true

[dependencies]
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.4"
# RON: Use a not-so-common serialization format that support comments, is not
# white-space dependent, and isn't annoyingly verbose or rigid with commas.
# It also simply fits in nicely with a Rust code base.
ron = "0.8.1"
thiserror = "1.0.50"

[dependencies.web-sys]
version = "0.3.65"
features = ["Request", "Response", "Window", "console"]

[dev-dependencies]
expect-test = "1.4.1"

[lints.clippy]
new_without_default = "allow"