[package]
name = "bouncy_instructor"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"
license = "AGPL-3.0-or-later"

# TODO: author, license, etc

[lib]
# cdylib is for WASM
# rlib is required for integration tests to work
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.100", features = ["enable-interning"] }
wasm-bindgen-futures = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.4"
strum = { version = "0.26", features = ["derive"] }
# RON: Use a not-so-common serialization format that support comments, is not
# white-space dependent, and isn't annoyingly verbose or rigid with commas.
# It also simply fits in nicely with a Rust code base.
ron = "0.12"
thiserror = "1.0.50"
console_error_panic_hook = "0.1.7"
svelte-store = "0.1.3"

[dependencies.web-sys]
version = "0.3.65"
features = ["Request", "Response", "Window", "console"]

[dev-dependencies]
expect-test = "1.4.1"

[lints.clippy]
new_without_default = "allow"
manual_range_contains = "allow"
uninlined_format_args = "allow"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory", "--enable-nontrapping-float-to-int"]