[package]
name = "bouncy_lab"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3"
plotters-backend = "0.3"
serde = "1.0"
serde_derive = "1.0"
ron = "0.10"
anyhow = "1.0"
clap = "4.5"
