[package]
name = "bouncy_stats"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7.2"
axum-oidc = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "=0.7.3", features = ["runtime-tokio", "sqlite", "postgres"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5.1" }
tower-http = { version = "0.5", features = ["cors"] }
tower-sessions = { version = "0.13" }
