[package]
name = "bouncy_stats"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7.2", features = ["macros"] }
axum-oidc = "0.5.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "=0.7.3", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "time",
    "chrono",
    "uuid",
] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5.1" }
tower-http = { version = "0.5", features = ["cors"] }
tower-sessions = { version = "0.13" }
tracing = "0.1.41"
uuid = { version = "1.13.1", features = ["serde", "v4"] }
